; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_core.c_core_flg_class_get.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_core.c_core_flg_class_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@R_FLAGS_FS_CLASSES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @core_flg_class_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @core_flg_class_get(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @R_FLAGS_FS_CLASSES, align 4
  %8 = call i32 @r_flag_space_push(i32* %6, i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @r_flag_get(i32* %9, i8* %10)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @r_flag_space_pop(i32* %12)
  %14 = load i32*, i32** %5, align 8
  ret i32* %14
}

declare dso_local i32 @r_flag_space_push(i32*, i32) #1

declare dso_local i32* @r_flag_get(i32*, i8*) #1

declare dso_local i32 @r_flag_space_pop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
